桌游吧4 新增功能：log4j日志输出到控制台和磁盘中

--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,6 +1,14 @@
 # Global logging configuration
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=DEBUG, Console,DailyRollingFile
+
 # Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+#Console  
+log4j.appender.Console=org.apache.log4j.ConsoleAppender  
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
+log4j.appender.Console.layout.ConversionPattern=[%t] %-5p [%C{1}] - %m%n
+     
+#DailyRollingFile
+log4j.appender.DailyRollingFile = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DailyRollingFile.File = F://EclipseWeb//mylogs//TavernJuneServer.log
+log4j.appender.DailyRollingFile.layout = org.apache.log4j.PatternLayout
+log4j.appender.DailyRollingFile.layout.ConversionPattern =[%t] %-5p [%C{1}] - %m%n
