新增功能： 玩家在登录成功后，会建立一个Tcp长连接，此长连接作为玩家的tcp总控。

--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,5 +1,5 @@
 # Global logging configuration
-log4j.rootLogger=DEBUG, Console,DailyRollingFile
+log4j.rootLogger=ERROR, Console,DailyRollingFile
 
 # Console output...
 #Console  
