--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<!-- 监听器 -->
+	<listener>
+		<listener-class>tc.init.ConfigureInit</listener-class>
+	</listener>
+
 
 	<!-- spring前端控制器，声明DispatcherServlet -->
 	<!-- 默认自动加载/WEB-INF/smart-servlet.xml这个spring配置文件 -->
