桌游吧6(测试可用) 追上了老程序的进度，现有功能： 多桌匹配，游戏匹配，选择英雄

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,7 +24,10 @@
 	</listener>
 	<!-- 监听器 -->
 	<listener>
-		<listener-class>tc.init.ConfigureInit</listener-class>
+		<listener-class>tc.init.UserConnectInit</listener-class>
+	</listener>
+	<listener>
+		<listener-class>tc.init.GameInit</listener-class>
 	</listener>
 
 
