--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,14 +1,14 @@
 # Global logging configuration
-log4j.rootLogger=ERROR, Console,DailyRollingFile
+log4j.rootLogger=INFO, Console,DailyRollingFile
 
 # Console output...
 #Console  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
-log4j.appender.Console.layout.ConversionPattern=[%t] %-5p [%C{1}] - %m%n
+log4j.appender.Console.layout.ConversionPattern=%-5p [%C{1}]%L - %m%n
      
 #DailyRollingFile
 log4j.appender.DailyRollingFile = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DailyRollingFile.File = F://EclipseWeb//mylogs//TavernJuneServer.log
+log4j.appender.DailyRollingFile.File = C://mylogs//TavernJuneServer.log
 log4j.appender.DailyRollingFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.DailyRollingFile.layout.ConversionPattern =[%t] %-5p [%C{1}] - %m%n
+log4j.appender.DailyRollingFile.layout.ConversionPattern =%-5p [%C{1}]%L - %m%n
