目前版本实现的功能： 游戏功能基本完成，语音通话质量不理想

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,7 +29,9 @@
 	<listener>
 		<listener-class>tc.init.GameInit</listener-class>
 	</listener>
-
+	<listener>
+		<listener-class>tc.init.SpeechInit</listener-class>
+	</listener>
 
 	<!-- spring前端控制器，声明DispatcherServlet -->
 	<!-- 默认自动加载/WEB-INF/smart-servlet.xml这个spring配置文件 -->
