--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -7,9 +7,9 @@ log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
 log4j.appender.Console.layout.ConversionPattern=%-5p [%C{1}][%t]%L - %m%n
      
-#DailyRollingFile
-log4j.appender.DailyRollingFile = org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.DailyRollingFile.File = C://mylogs//TavernJuneServer.log
-log4j.appender.DailyRollingFile.File = /home/zjj/mylogs/TavernJuneServer.log
-log4j.appender.DailyRollingFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.DailyRollingFile.layout.ConversionPattern =%-5p [%C{1}][%t]%L - %m%n
+##DailyRollingFile
+#log4j.appender.DailyRollingFile = org.apache.log4j.DailyRollingFileAppender
+##log4j.appender.DailyRollingFile.File = C://mylogs//TavernJuneServer.log
+#log4j.appender.DailyRollingFile.File = /home/zjj/mylogs/TavernJuneServer.log
+#log4j.appender.DailyRollingFile.layout = org.apache.log4j.PatternLayout
+#log4j.appender.DailyRollingFile.layout.ConversionPattern =%-5p [%C{1}][%t]%L - %m%n
