新增功能：好友聊天(添加好友、搜索好友、好友聊天、缓存信息等) [未经测试的版本]

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -32,6 +32,9 @@
 	<listener>
 		<listener-class>tc.init.SpeechInit</listener-class>
 	</listener>
+	<listener>
+		<listener-class>tc.init.ChatInit</listener-class>
+	</listener>
 
 	<!-- spring前端控制器，声明DispatcherServlet -->
 	<!-- 默认自动加载/WEB-INF/smart-servlet.xml这个spring配置文件 -->
