--- a/config/db.properties
+++ b/config/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/tavern_june
+jdbc.url=jdbc:mysql://localhost:3306/tavern_june?useUnicode=true&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=666666
